--- a/apps/frontend/src/pages/friends/styles.module.css
+++ b/apps/frontend/src/pages/friends/styles.module.css
@@ -6,5 +6,6 @@
 }
 
 .friend-item {
+	display: flex;
 	list-style: none;
 }
